Fixed Read Article Alignment in Article Previews

--- a/PotassiumDeVera1stQtrProj/css/ArticlePreview.module.css
+++ b/PotassiumDeVera1stQtrProj/css/ArticlePreview.module.css
@@ -52,6 +52,7 @@ div.article > p.description {
 
 div.article > a.redirectButton {
     grid-area: button;
+    justify-self: right;
     color: black;
     margin-right: 10px;
 }
